objects/ESC_Section__c.object
<CustomObject>
    <description>Used to define the sections on the forms</description>
    <fields>
        <fullName>ESC_Default_Render__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default Render Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Layout__c</fullName>
        <label>Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Column</fullName>
                    <default>true</default>
                    <label>1 Column</label>
                </value>
                <value>
                    <fullName>2 Columns</fullName>
                </value>
                <value>
                    <fullName>3 Columns</fullName>
                </value>
                <value>
                    <fullName>Tabular</fullName>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Visual Force</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Read_Only_Fields__c</fullName>
        <description>The fields from the referencedfeldset which are to be marked readonly</description>
        <label>Read Only Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Referenced_Fieldset__c</fullName>
        <description>The field set to get the field details for the referenced object</description>
        <label>Referenced Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Referenced_Object__c</fullName>
        <description>The object referenced in the section</description>
        <label>Referenced Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Referenced_Record_Type__c</fullName>
        <label>Referenced Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Visual_Force_Page_Name__c</fullName>
        <label>Visual Force Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESC_Layout__c</columns>
        <columns>ESC_Referenced_Object__c</columns>
        <columns>ESC_Referenced_Record_Type__c</columns>
        <columns>ESC_Referenced_Fieldset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>